<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_title_label"
        android:textSize="16sp"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:hint="@string/note_title_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_contents_label"
        android:textSize="16sp"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText
        android:id="@+id/note_contents_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/note_contents_hint"
        />
    <TextView
        android:id="@+id/note_keywords_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_keywords_label"
        android:textSize="16sp"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText
        android:id="@+id/keywords_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:hint="@string/note_keywords_hint"/>

    <Button
        android:id="@+id/save_note_button"
        android:text="Save Changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/delete_note_button"
        android:text="Delete Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>